# sensorium

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  README.md  pyproject.toml
crates/sensor-core/: Cargo.toml
crates/sensor-core/src/: README.md  lib.rs
crates/sensor-election/: Cargo.toml
crates/sensor-election/src/: README.md  lib.rs
crates/sensor-python/: Cargo.toml
crates/sensor-python/src/: README.md  lib.rs
crates/sensor-redis/: Cargo.toml
crates/sensor-redis/src/: README.md  lib.rs
crates/sensor-sync/: Cargo.toml
crates/sensor-sync/src/: README.md  lib.rs  time_model.rs
examples/: cli.py  minimal_experiment.py  synthetic_sensors.py
experiments/: common.py  plot_alignment_error.py  plot_failover.py  plot_false_association.py  plot_probability_mass.py  run_experiments.py
tests/: test_integration.py
