[package]
name = "sensor-redis"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
redis = { version = "0.25.4", features = ["tokio-comp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sensor-core = { path = "../sensor-core" }

[dev-dependencies]
tokio = { version = "1", features = ["full"] }
