[package]
name = "sensor-sync"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
sensor-core = { path = "../sensor-core" }
sensor-redis = { path = "../sensor-redis" }
sensor-election = { path = "../sensor-election" }
redis = "0.25.4"

[dev-dependencies]
approx = "0.5"
